samples/_failures_safe/1761631085_3e52c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed296492.c: In function ‘main’:
./samples/SAFE/__tmp_ed296492.c:146:5: error: expected ‘{’ at end of input
  146 |     struct
      |     ^~~~~~
./samples/SAFE/__tmp_ed296492.c:146:5: error: expected declaration or statement at end of input
